--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <form id="myForm">
   <input type="text" id="name" placeholder="Your Name" required>
   <input type="email" id="email" placeholder="Your Email" required>
@@ -49,3 +50,4 @@
   }
 }
 </script>
+</html>
