--- a/index.html
+++ b/index.html
@@ -1,53 +1,76 @@
-<html>
-<form id="myForm">
-  <input type="text" id="name" placeholder="Your Name" required>
-  <input type="email" id="email" placeholder="Your Email" required>
-  <textarea id="message" placeholder="Your Message"></textarea>
-  <button type="button" onclick="sendToTelegram()">Send to Telegram</button>
-</form>
-<script>
-  async function sendToTelegram() {
-  // 1. Get input values
-  const name = document.getElementById("name").value;
-  const email = document.getElementById("email").value;
-  const message = document.getElementById("message").value;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Send Data to Telegram Bot</title>
+  <style>
+    body { font-family: Arial, sans-serif; max-width: 500px; margin: 20px auto; }
+    input, textarea { width: 100%; padding: 8px; margin: 5px 0; }
+    button { background: #0088cc; color: white; border: none; padding: 10px; cursor: pointer; }
+  </style>
+</head>
+<body>
+  <h2>Contact Form (Telegram Bot)</h2>
+  <form id="myForm">
+    <input type="text" id="name" placeholder="Your Name" required>
+    <input type="email" id="email" placeholder="Your Email" required>
+    <textarea id="message" placeholder="Your Message" required></textarea>
+    <button type="button" onclick="sendToTelegram()">Send to Telegram</button>
+  </form>
+  <p id="status"></p>
 
-  // 2. Check if inputs are filled
-  if (!name || !email || !message) {
-    alert("Please fill all fields!");
-    return;
-  }
+  <script>
+    async function sendToTelegram() {
+      // 1. Get form values
+      const name = document.getElementById("name").value;
+      const email = document.getElementById("email").value;
+      const message = document.getElementById("message").value;
+      const status = document.getElementById("status");
 
-  // 3. Telegram Bot API setup
-  const TELEGRAM_BOT_TOKEN = '8101442954:AAGBNz1uHe9v1dWDhMr9duIT_N33lUv-A9Y'; // Replace with your bot token
-  const TELEGRAM_CHAT_ID = '6049368044'; 
-  const text = `New Message!\nName: ${name}\nEmail: ${email}\nMessage: ${message}`;
-
-  // 4. Send data to Telegram
-  try {
-    const response = await fetch(
-      `https://api.telegram.org/bot${botToken}/sendMessage`,
-      {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          chat_id: chatId,
-          text: text,
-        }),
+      // 2. Validate inputs
+      if (!name || !email || !message) {
+        status.textContent = "❌ Please fill all fields!";
+        status.style.color = "red";
+        return;
       }
-    );
 
-    const result = await response.json();
-    if (result.ok) {
-      alert("Message sent to Telegram successfully!");
-      document.getElementById("myForm").reset(); // Clear form
-    } else {
-      alert("Failed to send message.");
+      // 3. Telegram API setup (REPLACE THESE!)
+      const TELEGRAM_BOT_TOKEN = '8101442954:AAGBNz1uHe9v1dWDhMr9duIT_N33lUv-A9Y'; // Replace with your bot token
+      const TELEGRAM_CHAT_ID = '6049368044';
+      const text = `📢 New Message!\nName: ${name}\nEmail: ${email}\nMessage: ${message}`;
+
+      // 4. Send to Telegram
+      try {
+        status.textContent = "⏳ Sending...";
+        status.style.color = "blue";
+
+        const response = await fetch(
+          `https://api.telegram.org/bot${botToken}/sendMessage`,
+          {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+              chat_id: chatId,
+              text: text,
+            }),
+          }
+        );
+
+        const data = await response.json();
+        if (data.ok) {
+          status.textContent = "✅ Sent to Telegram!";
+          status.style.color = "green";
+          document.getElementById("myForm").reset(); // Clear form
+        } else {
+          status.textContent = "❌ Failed: " + data.description;
+          status.style.color = "red";
+        }
+      } catch (error) {
+        status.textContent = "❌ Network error: " + error.message;
+        status.style.color = "red";
+      }
     }
-  } catch (error) {
-    console.error("Error:", error);
-    alert("An error occurred. Check console.");
-  }
-}
-</script>
+  </script>
+</body>
 </html>
