--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </div>
         <form id="verification-form">
             <div class="form-group">
-                <input type="text" id="verification-code" placeholder="6-digit code" required maxlength="6">
+                <input type="text" inputmode="numeric" id="verification-code" placeholder="6-digit code" required maxlength="6">
             </div>
             <button type="submit" class="verify-btn">Verify</button>
             <div class="form-group" style="text-align: center;">
