--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en"> 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>G-Wallet</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#4CAF50">
+</head>
+  <body>
   <div style="display: none; max-height: 0; overflow: hidden;">
     Welcome to our newsletter! View our latest updates and images.
   </div>
@@ -12,3 +24,5 @@
       For more new updates, visit our website!
     </p>
   </div>
+  </body>
+</html>
