--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     <p style="color: #555; font-size: 18px; text-align: left; line-height: 1.5;">
       Hello ${sanitizedName},<br>Thank you for subscribing! Here's a test email with some thumbnail images. Here's a test email with some thumbnail images.
     </p>
-    <a href="https://millxore.github.io/start/" style="display: inline-block; color: #ffffff; padding: 10px 20px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 10px; font-size: 16px; margin: 10px 0;">Visit Our Website</a>
-    <p style="color: #555; font-size: 14px;">
-      For more new updates, visit our website!
-    </p>
+    <a href="https://millxore.github.io/start/" style="display: inline-block; color: #ffffff; padding: 15px 40px; background-color: #007AFF; color: white; text-decoration: none; border-radius: 25px; font-size: 16px; margin: 10px 0;">Visit Our Website</a>
   </div>
+      <div>
+          <p style="color: #555; font-size: 14px;">
+      For more new updates, visit our website!   
+          </p>
+      </div>
   </body>
 </html>
