--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </p>
     <a href="https://millxore.github.io/start/" style="display: inline-block; color: #ffffff; padding: 15px 40px; background-color: #007AFF; color: white; text-decoration: none; border-radius: 25px; font-size: 16px; margin: 10px 0;">Explore</a>
   </div>
-      <div style="background-color: #f1f2f4;">
+      <div style="background-color: #f1f2f4; max-width: 600px; margin: 0 auto; padding: 20px;">
           <p style="color: #555; font-size: 14px;">
       For more new updates, visit our website!   
           </p>
