--- a/index.html
+++ b/index.html
@@ -23,7 +23,22 @@
   </div>
       <div style="background-color: #f1f2f4; max-width: 600px; margin: 0 auto; padding: 20px;">
           <p style="color: #555; font-size: 14px;">
+      For more new updates, visit our website! For more new updates, visit our website! For more new updates, visit our website!
+          </p>
+          <p style="color: #555; font-size: 14px;">
       For more new updates, visit our website!   
+          </p>
+          <p style="color: #555; font-size: 14px;">
+      For more new updates, visit our website! For more new updates, visit our website!
+          </p>
+          <p style="color: #555; font-size: 14px;">
+      For more new updates, visit our website!   
+          </p>
+          <p style="color: #555; font-size: 14px;">
+      For more new updates, visit our website!   
+          </p>
+          <p style="color: #555; font-size: 14px;">
+      For more new updates, visit our website! For more new updates, visit our website! For more new updates, visit our website!
           </p>
       </div>
   </body>
