--- a/index.html
+++ b/index.html
@@ -31,8 +31,25 @@
                   <a href="#" style="color: #0070ba; font-size: 14px; font-weight: bold; text-decoration: none; padding: 0px 5px; border-right: 1px solid;">Security</a>
                   <a href="#" style="color: #0070ba; font-size: 14px; font-weight: bold; text-decoration: none; padding: 0px 5px;">App</a>
               </div>
-              <div>
-              </div>
+            <a href="#">
+                <img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook Icon" width="28" height="28">
+            </a>
+            <!-- Twitter -->
+            <a href="#">
+                <img src="https://img.icons8.com/fluency/48/twitter.png" alt="X (Twitter) Icon" width="28" height="28">
+            </a>
+            <!-- Instagram -->
+            <a href="#">
+                <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram Icon" width="28" height="28">
+            </a>
+            <!-- LinkedIn -->
+            <a href="#">
+                <img src="https://img.icons8.com/fluency/48/linkedin.png" alt="LinkedIn Icon" width="28" height="28">
+            </a>
+            <!-- YouTube -->
+            <a href="#">
+                <img src="https://img.icons8.com/fluency/48/youtube-play.png" alt="YouTube Icon" width="28" height="28">
+            </a>
           </div>
           <p style="color: #555; font-size: 14px;">
       For more new updates, visit our website! For more new updates, visit our website! For more new updates, visit our website!
