--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="#" style="font-size: 14px; color: #1a73e8; text-decoration: none; margin-right: 10px;">Security</a>
       <a href="#" style="font-size: 14px; color: #1a73e8; text-decoration: none;">Apps</a>
           </div>
-          <div>
+          <div style="text-align: center;">
       <a href="#" style="margin-right: 10px;"><img src="https://simpleicons.org/icons/x.svg" alt="X" width="40" height="40" style="display: inline-block; vertical-align: middle; border-radius: 50%;"></a>
       <a href="#" style="margin-right: 10px;"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/instagram.svg" alt="Instagram" width="40" height="40" style="display: inline-block; vertical-align: middle; border-radius: 50%;"></a>
       <a href="#" style="margin-right: 10px;"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/facebook.svg" alt="Facebook" width="40" height="40" style="display: inline-block; vertical-align: middle; border-radius: 50%;"></a>
