--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
               <hr style="margin: 30px auto;">
           </div>
           <div style="text-align: center;">
-      <a href="#" style="font-size: 14px; color: #1a73e8; text-decoration: none; margin-right: 10px;">Help & Contact</a>
-      <a href="#" style="font-size: 14px; color: #1a73e8; text-decoration: none; margin-right: 10px; border-left: 1px solid;">Security</a>
-      <a href="#" style="font-size: 14px; color: #1a73e8; text-decoration: none; border-left: 1px solid;">Apps</a>
+      <a href="#" style="font-size: 14px; color: #1a73e8; text-decoration: none; padding: 0 10px;">Help & Contact</a>
+      <a href="#" style="font-size: 14px; color: #1a73e8; text-decoration: none; padding: 0 10px; border-left: 1px solid;">Security</a>
+      <a href="#" style="font-size: 14px; color: #1a73e8; text-decoration: none; padding: 0 10px; border-left: 1px solid;">Apps</a>
           </div>
           <div style="text-align: center;">
       <a href="#" style="margin-right: 10px;"><img src="https://simpleicons.org/icons/x.svg" alt="X" width="40" height="40" style="display: inline-block; vertical-align: middle; border-radius: 50%; border: 1px solid blue; color: green;"></a>
