--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <a href="#" style="font-size: 14px; font-weight: bold; color: #1a73e8; text-decoration: none; padding: 0 10px; border-left: 1px solid;">Apps</a>
           </div>
           <div style="text-align: center;">
-      <a href="#" style="margin-right: 10px;"><img src="https://simpleicons.org/icons/x.svg" alt="X" width="40" height="40" style="display: inline-block; vertical-align: middle; border-radius: 50%; border: 2px solid;"></a>
-      <a href="#" style="margin-right: 10px;"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/instagram.svg" alt="Instagram" width="40" height="40" style="display: inline-block; vertical-align: middle; border-radius: 50%; border: 2px solid;"></a>
-      <a href="#" style="margin-right: 10px;"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/facebook.svg" alt="Facebook" width="40" height="40" style="display: inline-block; vertical-align: middle; border-radius: 50%; border: 2px solid;"></a>
-      <a href="#"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/linkedin.svg" alt="LinkedIn" width="40" height="40" style="display: inline-block; vertical-align: middle; border-radius: 50%; border: 2px solid;"></a>
+      <a href="#" style="margin-right: 10px;"><img src="https://simpleicons.org/icons/x.svg" alt="X" width="40" height="40" style="display: inline-block; vertical-align: middle; border-radius: 50%; border: 2px solid black;"></a>
+      <a href="#" style="margin-right: 10px;"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/instagram.svg" alt="Instagram" width="40" height="40" style="display: inline-block; vertical-align: middle; border-radius: 50%; border: 2px solid black;"></a>
+      <a href="#" style="margin-right: 10px;"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/facebook.svg" alt="Facebook" width="40" height="40" style="display: inline-block; vertical-align: middle; border-radius: 50%; border: 2px solid black;"></a>
+      <a href="#"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/linkedin.svg" alt="LinkedIn" width="40" height="40" style="display: inline-block; vertical-align: middle; border-radius: 50%; border: 2px solid black;"></a>
           </div>
           <p style="color: #555; font-size: 14px;">
       For more new updates, visit our website! For more new updates, visit our website! For more new updates, visit our website!
