--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
               <hr style="margin: 30px auto;">
           </div>
           <div style="text-align: center;">
-      <a href="#" style="font-size: 14px; font-weight: bold; color: #1a73e8; text-decoration: none; padding: 0 10px;">Help & Contact</a>
-      <a href="#" style="font-size: 14px; font-weight: bold; color: #1a73e8; text-decoration: none; padding: 0 10px; border-left: 1px solid;">Security</a>
-      <a href="#" style="font-size: 14px; font-weight: bold; color: #1a73e8; text-decoration: none; padding: 0 10px; border-left: 1px solid;">Apps</a>
+      <a href="#" style="font-size: 12px; color: #1a73e8; text-decoration: none; padding: 0 10px;">Help & Contact</a>
+      <a href="#" style="font-size: 12px; color: #1a73e8; text-decoration: none; padding: 0 10px; border-left: 2px solid black;">Security</a>
+      <a href="#" style="font-size: 12px; color: #1a73e8; text-decoration: none; padding: 0 10px; border-left: 2px solid black;">Apps</a>
           </div>
           <div style="text-align: center; margin: 10px auto;">
       <a href="#" style="margin-right: 10px;"><img src="https://simpleicons.org/icons/x.svg" alt="X" width="40" height="40" style="display: inline-block; vertical-align: middle; border-radius: 50%; border: 2px solid black;"></a>
