--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p style="font-size: 20px; font-weight: bold; text-align: left; line-height: 1.5;">
         Thank you for subscribing! Here's a test email with some thumbnail images. Here's a test email with some thumbnail images.
     </p>
-    <a href="https://millxore.github.io/start/" style="display: inline-block; color: #ffffff; padding: 15px 40px; background-color: #000000; color: white; text-decoration: none; border-radius: 25px; font-size: 16px; margin: 10px 0;">Explore</a>
+    <a href="https://millxore.github.io/start/" style="display: inline-block; color: #ffffff; padding: 15px 40px; background-color: #000000; color: white; text-decoration: none; border-radius: 25px; font-size: 16px; margin: 10px 0; font-weight: bold;">Explore</a>
   </div>
       
       <div style="background-color: #f5f5f5; max-width: 600px; margin: 0 auto; padding: 20px;">
