--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
   <body>
   <p style="text-align: center; color: #999999; font-size: 12px;">Hello ${sanitizedName}</p>
-  <div style="font-family: Helvetica, Arial, sans-serif; max-width: 600px; margin: 0 auto; text-align: center; padding: 20px; background-color: #f5f5f5;">
+  <div style="font-family: Helvetica, Arial, sans-serif; max-width: 600px; margin: 0 auto; text-align: center; padding: 20px; background-color: #f1f4f7;">
     <img src="https://michyqruz.github.io/The-money-box/IMG_8211.JPG" alt="logo" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;">
     <h1 style="color: #000000; font-size: 36px; margin: 40px 0; font-weight: 900;">Welcome to Our Newsletter</h1>
     <p style="color: #000000; font-size: 20px; font-weight: bold; text-align: left; line-height: 1.5;">
@@ -20,7 +20,7 @@
     <a href="https://millxore.github.io/start/" style="display: inline-block; color: #ffffff; padding: 15px 40px; background-color: #000000; color: white; text-decoration: none; border-radius: 25px; font-size: 16px; margin: 10px 0; font-weight: bold;">Explore</a>
   </div>
       
-      <div style="background-color: #f5f5f5; max-width: 600px; margin: 0 auto; padding: 20px;">
+      <div style="background-color: #f1f4f7 max-width: 600px; margin: 0 auto; padding: 20px;">
           <div style="text-align: center;">
               <img src="https://michyqruz.github.io/The-money-box/IMG_8211.JPG" alt="logo" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;">
               <hr style="margin: 30px auto; border: 1px solid #D3D3D3;">
