--- a/index.html
+++ b/index.html
@@ -31,22 +31,19 @@
               <a href="#" style="font-size: 12px; color: #1a73e8; text-decoration: none; padding: 0 8px; border-left: 2px solid black;">Apps</a>
           </div>
           <p style="color: #555; font-size: 14px;">
-      For more new updates, visit our website! For more new updates, visit our website! For more new updates, visit our website!
+     We are committed to preventing fraudulent emails. Emails from us will always contain your full name. <a href="#" style="font-size: 12px; color: #1a73e8; text-decoration: none;">Learn to identify phishing</a>
           </p>
           <p style="color: #555; font-size: 14px;">
-      For more new updates, visit our website!   
+      Please don't reply to this email. To get in touch with us, click <a href="#" style="font-size: 12px; color: #1a73e8; text-decoration: none;">Help & Contact.</a>   
           </p>
           <p style="color: #555; font-size: 14px;">
-      For more new updates, visit our website! For more new updates, visit our website!
+      Not sure why you received this email? <a href="#" style="font-size: 12px; color: #1a73e8; text-decoration: none;">Learn more</a>
           </p>
           <p style="color: #555; font-size: 14px;">
-      For more new updates, visit our website!   
+      Copyright © 1999-2025. All rights reserved. 
           </p>
           <p style="color: #555; font-size: 14px;">
-      For more new updates, visit our website!   
-          </p>
-          <p style="color: #555; font-size: 14px;">
-      For more new updates, visit our website! For more new updates, visit our website! For more new updates, visit our website!
+      Rts. Ltd. is licensed by the Monetary Authority of Singapore as a Major Payment Institution under the Payment Services Act 2019.  
           </p>
       </div>
   </body>
