--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="https://millxore.github.io/start/" style="display: inline-block; color: #ffffff; padding: 15px 40px; background-color: #000000; color: white; text-decoration: none; border-radius: 25px; font-size: 16px; margin: 10px 0; font-weight: bold;">Explore</a>
   </div>
       
-      <div style="background-color: #f1f4f7 max-width: 600px; margin: 0 auto; padding: 20px;">
+      <div style="background-color: #f1f4f7; max-width: 600px; margin: 0 auto; padding: 20px;">
           <div style="text-align: center;">
               <img src="https://michyqruz.github.io/The-money-box/IMG_8211.JPG" alt="logo" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;">
               <hr style="margin: 30px auto; border: 1px solid #D3D3D3;">
