--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
               <hr style="margin: 30px auto; border: 1px solid #D3D3D3;">
           </div>
           <div style="text-align: center; display: flex; justify-content: center;">
-              <p style="font-size: 12px; color: #1a73e8; padding: 0 8px;">Help & Contact</p>
-              <p style="font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Security</p>
-              <p style="font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Apps</p>
+              <p style="font-size: 12px; color: #1a73e8; padding: 0 8px;">Reliable</p>
+              <p style="font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Secure</p>
+              <p style="font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Easy</p>
           </div>
           <p style="color: #555; font-size: 14px;">
      We are committed to preventing fraudulent emails. Emails from us will always contain your full name. <span style="font-size: 12px; color: #1a73e8;">Learn to identify phishing</span>
           </p>
           <p style="color: #555; font-size: 14px;">
-      Please don't reply to this email. To get in touch with us, click <span style="font-size: 12px; color: #1a73e8;">Help & Contact.</span>   
+      Please don't reply to this email. To get in touch with us, Check <span style="font-size: 12px; color: #1a73e8;">Help & Contact.</span>
           </p>
           <p style="color: #555; font-size: 14px;">
-      Not sure why you received this email? <span style="font-size: 12px; color: #1a73e8;">Learn more</span>
+      Not sure why you received this email? <span style="font-size: 12px; color: #1a73e8;">read again</span>
           </p>
           <p style="color: #555; font-size: 14px;">
       Copyright © 1999-2025. All rights reserved. 
