--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
   <p style="text-align: center; color: #999999; font-size: 12px;">Hello ${sanitizedName}</p>
   <div style="font-family: Helvetica, Arial, sans-serif; max-width: 600px; margin: 0 auto; text-align: center; padding: 20px; background-color: #f1f4f7;">
-    <img src="https://michyqruz.github.io/The-money-box/IMG_8211.JPG" alt="logo" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;">
+    <img src="https://michyqruz.github.io/The-money-box/IMG_8578.jpeg" alt="logo" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;">
     <h1 style="color: #000000; font-size: 36px; margin: 40px 0; font-weight: 900;">Welcome to Our Newsletter</h1>
     <p style="color: #000000; font-size: 20px; font-weight: bold; text-align: left; line-height: 1.5;">
         Thank you for subscribing! Here's a test email with some thumbnail images. Here's a test email with some thumbnail images.
@@ -22,7 +22,7 @@
       
       <div style="background-color: #f1f4f7; max-width: 600px; margin: 0 auto; padding: 20px;">
           <div style="text-align: center;">
-              <img src="https://michyqruz.github.io/The-money-box/IMG_8211.JPG" alt="logo" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;">
+              <img src="https://michyqruz.github.io/The-money-box/IMG_8578.jpeg" alt="logo" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;">
               <hr style="margin: 30px auto; border: 1px solid #D3D3D3;">
           </div>
           <div style="text-align: center; display: flex; justify-content: center;">
