--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       Please don't reply to this email. To get in touch with us, Check <span style="font-size: 12px; color: #1a73e8;">Help & Contact.</span>
           </p>
           <p style="color: #555; font-size: 14px;">
-      Not sure why you received this email? <span style="font-size: 12px; color: #1a73e8;">read again</span>
+      For more info, visit our website!
           </p>
           <p style="color: #555; font-size: 14px;">
       Copyright © 1999-2025. All rights reserved. 
