--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
               <img src="https://michyqruz.github.io/The-money-box/IMG_8578.jpeg" alt="logo" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;">
               <hr style="margin: 30px auto; border: 1px solid #D3D3D3;">
           </div>
-          <div style="text-align: center; display: flex; justify-content: center;">
-              <p style="font-size: 12px; color: #1a73e8; padding: 0 8px;">Reliable</p>
-              <p style="font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Secure</p>
-              <p style="font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Easy</p>
+          <div style="text-align: center; display: flex;">
+              <p style="display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px;">Reliable</p>
+              <p style="display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Secure</p>
+              <p style="display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Easy</p>
           </div>
           <p style="color: #555; font-size: 14px;">
      We are committed to preventing fraudulent emails. Emails from us will always contain your full name. <span style="font-size: 12px; color: #1a73e8;">Learn to identify phishing</span>
