--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
               <img src="https://michyqruz.github.io/The-money-box/IMG_8578.jpeg" alt="logo" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;">
               <hr style="margin: 30px auto; border: 1px solid #D3D3D3;">
           </div>
-          <div style="text-align: center; display: flex;">
-              <p style="display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px;">Reliable</p>
+          <div style="text-align: center; display: flex; border: 1px solid;">
+              <p style="border: 1px solid red; display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px;">Reliable</p>
               <p style="display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Secure</p>
               <p style="display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Easy</p>
           </div>
