--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
               <hr style="margin: 30px auto; border: 1px solid #D3D3D3;">
           </div>
           <div style="text-align: center; display: flex; border: 1px solid;">
-              <p style="border: 1px solid red; display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px;">Reliable</p>
-              <p style="display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Secure</p>
-              <p style="display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Easy</p>
+              <p style="border: 1px solid red; font-size: 12px; color: #1a73e8; padding: 0 8px;">Reliable</p>
+              <p style="font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Secure</p>
+              <p style="font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Easy</p>
           </div>
           <p style="color: #555; font-size: 14px;">
      We are committed to preventing fraudulent emails. Emails from us will always contain your full name. <span style="font-size: 12px; color: #1a73e8;">Learn to identify phishing</span>
