--- a/index.html
+++ b/index.html
@@ -10,25 +10,19 @@
     <meta name="theme-color" content="#4CAF50">
 </head>
   <body>
-  <p style="text-align: center; color: #999999; font-size: 12px;">Hello ${sanitizedName}</p>
-  <div style="font-family: Helvetica, Arial, sans-serif; max-width: 600px; margin: 0 auto; text-align: center; padding: 20px; background-color: #f1f4f7;">
-    <img src="https://michyqruz.github.io/The-money-box/IMG_8578.jpeg" alt="logo" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;">
-    <h1 style="color: #000000; font-size: 36px; margin: 40px 0; font-weight: 900;">$5000 PENDING TRANSACTION</h1>
-    <p style="color: #000000; font-size: 20px; font-weight: bold; text-align: left; line-height: 1.5;">
-        You just receieved $5000 from a bussiness account for the first time, due to security reason you need to pay a transaction fee of $100 before the fund is deposited into your account.
-    </p>
-    <a href="https://millxore.github.io/seen/" style="display: inline-block; color: #ffffff; padding: 15px 40px; background-color: #000000; color: white; text-decoration: none; border-radius: 25px; font-size: 16px; margin: 10px 0; font-weight: bold;">Continue</a>
-  </div>
-      
-      <div style="background-color: #f1f4f7; max-width: 600px; margin: 0 auto; padding: 20px;">
+      <div style="text-align: center; background-color: #f1f7f7; max-width: 500px; margin: 0 auto; padding: 20px;">
+          <img src="https://cdn.pixabay.com/photo/2021/04/30/16/47/btc-logo-6219386_1280.png" alt="logo" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;">
+          <h1 style="font-size: 32px;">Big text</h1>
+          <p>Hello there,</p>
+      </div>
+      <div style="background-color: #f1f7f7; max-width: 500px; margin: 0 auto; padding: 20px;">
           <div style="text-align: center;">
-              <img src="https://michyqruz.github.io/The-money-box/IMG_8578.jpeg" alt="logo" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;">
               <hr style="margin: 30px auto; border: 1px solid #D3D3D3;">
           </div>
           <div style="text-align: center;">
-              <p style="display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px;">Reliable</p>
-              <p style="display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Secure</p>
-              <p style="display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px; border-left: 2px solid black;">Easy</p>
+              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px; border: 2px solid black;"></p>
+              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px; border: 2px solid black;"></p>
+              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; color: #1a73e8; padding: 0 8px; border: 2px solid black;"></p>
           </div>
           <p style="color: #555; font-size: 14px;">
      We are committed to preventing fraudulent emails. Emails from us will always contain your full name. <span style="font-size: 12px; color: #1a73e8;">Learn to identify phishing</span>
