--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
               <hr style="margin: 30px auto; border: 1px solid #D3D3D3;">
           </div>
           <div style="text-align: center;">
-              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #1a73e8; padding: 0 8px; border: 2px solid black;"></p>
-              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #1a73e8; padding: 0 8px; border: 2px solid black;"></p>
-              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #1a73e8; padding: 0 8px; border: 2px solid black;"></p>
+              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #f7b611; padding: 0 8px; border: 2px solid black;"></p>
+              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #f7b611; padding: 0 8px; border: 2px solid black;"></p>
+              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #f7b611; padding: 0 8px; border: 2px solid black;"></p>
           </div>
           <p style="color: #555; font-size: 14px;">
-     We are committed to preventing fraudulent emails. Emails from us will always contain your full name. <span style="font-size: 12px; color: #1a73e8;">Learn to identify phishing</span>
+              We are committed to preventing fraudulent emails. Emails from us will always contain your full name. <span style="font-size: 12px; color: #1a73e8;">Learn to identify phishing</span>
           </p>
           <p style="color: #555; font-size: 14px;">
-      Please don't reply to this email. To get in touch with us, Check <span style="font-size: 12px; color: #1a73e8;">Help & Contact.</span>
+              Please don't reply to this email. To get in touch with us, Check <span style="font-size: 12px; color: #1a73e8;">Help & Contact.</span>
           </p>
           <p style="color: #555; font-size: 14px;">
-      For more info, visit our website!
+              For more info, visit our website!
           </p>
           <p style="color: #555; font-size: 14px;">
-      Copyright © 1999-2025. All rights reserved. 
+              Copyright © 1999-2025. All rights reserved. 
           </p>
           <p style="color: #555; font-size: 14px;">
-      Rts. Ltd. is licensed by the Monetary Authority of Singapore as a Major Payment Institution under the Payment Services Act 2019.  
+              Rts. Ltd. is licensed by the Monetary Authority of Singapore as a Major Payment Institution under the Payment Services Act 2019.  
           </p>
       </div>
   </body>
