--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h1 style="font-size: 32px;">Big text</h1>
           <p>Hello there,</p>
       </div>
-      <div style="background-color: #f1f7f7; max-width: 500px; margin: 0 auto; padding: 20px;">
+      <div style="background-color: #f1f7f7; max-width: 500px; padding: 20px;">
           <div style="text-align: center;">
               <hr style="margin: 30px auto; border: 1px solid #D3D3D3;">
           </div>
