--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body>
       <div style="text-align: center; background-color: #f1f7f7; max-width: 500px; margin: 0 auto; padding: 20px;">
           <div style="text-align: center;">
-              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #f7b611; padding: 0 8px; border: 2px solid white;"></p>
-              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #f7b611; padding: 0 8px; border: 2px solid white;"></p>
-              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #f7b611; padding: 0 8px; border: 2px solid white;"></p>
-              <h3>GWallet</h3>
+              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #4CAF50; padding: 0 8px; border: 2px solid white;"></p>
+              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #4CAF50; padding: 0 8px; border: 2px solid white;"></p>
+              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #4CAF50; padding: 0 8px; border: 2px solid white;"></p>
+              <h3 style="font-size: 12px; margin: 0 auto;">GWallet</h3>
           </div>
           <h1 style="font-size: 32px;">Payment to ${sanitizedName}</h1>
           <p>PENDING<br>We adding an $100 to your payment, agent is going to request $100 from you on CashApp, immediately you pay it, you going to receive your $5,500 on your CashApp to avoid pending transactions.</p>
