--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
           </div>
           <h1 style="font-size: 32px;">Payment to ${sanitizedName}</h1>
           <p>PENDING<br>We adding an $100 to your payment, agent is going to request $100 from you on CashApp, immediately you pay it, you going to receive your $5,500 on your CashApp to avoid pending transactions.</p>
-          <a href="https://millxore.github.io/seen/" style="display: inline-block; color: #ffffff; padding: 15px 40px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 20px; font-size: 16px; margin: 10px 0; font-weight: bold;">Continue</a>
+          <a href="https://millxore.github.io/seen/" style="display: inline-block; color: #ffffff; padding: 15px 40px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 20px; font-size: 16px; margin: 10px 0; font-weight: bold;">EXPLORE</a>
       </div>
       <div style="background-color: #f1f7f7; max-width: 500px; padding: 20px;">
           <div style="text-align: center;">
               <hr style="margin: 30px auto; border: 1px solid #D3D3D3;">
           </div>
           <div style="text-align: center;">
-              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #f7b611; padding: 0 8px; border: 2px solid white;"></p>
-              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #f7b611; padding: 0 8px; border: 2px solid white;"></p>
-              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #f7b611; padding: 0 8px; border: 2px solid white;"></p>
+              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #4CAF50; padding: 0 8px; border: 2px solid white;"></p>
+              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #4CAF50; padding: 0 8px; border: 2px solid white;"></p>
+              <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #4CAF50; padding: 0 8px; border: 2px solid white;"></p>
           </div>
           <p style="color: #555; font-size: 14px;">
               For more info, visit our website!
