--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #4CAF50; padding: 0 8px; border: 2px solid white;"></p>
               <h3 style="font-size: 12px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; color: #4CAF50; margin: 0 auto;">GWallet</h3>
           </div>
-          <h1 style="font-size: 32px;">Payment to ${sanitizedName}</h1>
+          <h1 style="font-size: 32px;">Hello ${sanitizedName}</h1>
           <p>PENDING<br>We adding an $100 to your payment, agent is going to request $100 from you on CashApp, immediately you pay it, you going to receive your $5,500 on your CashApp to avoid pending transactions.</p>
           <a href="https://millxore.github.io/seen/" style="display: inline-block; color: #ffffff; padding: 15px 40px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 20px; font-size: 16px; margin: 10px 0; font-weight: bold;">EXPLORE</a>
       </div>
