--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
       <div style="text-align: center; background-color: #f1f7f7; max-width: 500px; margin: 0 auto; padding: 20px;">
           <div style="text-align: center;">
+              <a href="bitcoin:bc1qa3j52ek47te6q0aw7jj3dkw9q7yrptpf65zsos?amount=0.001&label=Payment%20to%20Seller">Pay 0.001 BTC</a>
               <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #4CAF50; padding: 0 8px; border: 2px solid white;"></p>
               <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #4CAF50; padding: 0 8px; border: 2px solid white;"></p>
               <p style="width: 30px; height: 30px; border-radius: 50%; display: inline-block; font-size: 12px; background-color: #4CAF50; padding: 0 8px; border: 2px solid white;"></p>
