--- a/home.html
+++ b/home.html
@@ -1,1 +1,335 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="Unlock the secrets to financial freedom and wealth management.">
+  <meta name="keywords" content="Money Box, Forex Ebook, PDF Strategy">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
+  <link href="moneybox.jpeg" rel="icon" type="images/png">
+  <title>The Money Box - Secret to financial freedom</title>
+</head>
+  <style>
+    /* General Styles */
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #121212;
+  color: #e0e0e0;
+  line-height: 1.6;
+}
 
+/* Top Ad Styles */
+.top-ad {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #ff6f61;
+  color: #fff;
+  padding: 10px 20px;
+  z-index: 1000;
+  border-bottom: 2px solid #ff6f61;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  overflow: hidden; /* Ensures content does not overflow during animation */
+}
+
+.ad-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  top: -100px; /* Start hidden above the viewport */
+  left: 0px;
+  position: relative;
+}
+
+.ad-content p {
+  margin: 0;
+  font-size: 1rem;
+}
+
+.ad-content a {
+  color: white;
+  font-size: 1rem;
+}
+
+.close-ad {
+  background: transparent;
+  border: none;
+  color: #fff;
+  font-size: 1.5rem;
+  cursor: pointer;
+  padding: 0 30px;
+}
+
+.close-ad:hover {
+  color: #ddd;
+}
+
+/* Hidden Class for Animation */
+.hidden-content {
+  top: -100px; /* Position above the viewport */
+}
+
+.visible-content  {
+  top: 0; /* Position at the top of the viewport */
+}
+
+a {
+  color: #ff6f61;
+  text-decoration: none;
+  text-align: center;
+}
+
+a h2{
+  background-color: blanchedalmond;
+  max-width: 300px;
+  margin: auto;
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px #ff6f61;
+  cursor: pointer;
+  line-height: 2rem;
+  padding: 5px;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/* Header */
+.header {
+  text-align: center;
+  padding: 2rem;
+  background-image: url('moneybox.jpeg'); 
+  background-position: bottom; 
+  background-size: cover; 
+  filter: blur(3px); 
+  border-bottom: 2px solid #ff6f61;
+  border-top: 10px solid black;
+  max-height: 80px;
+}
+
+.header h1 {
+  font-size: 3rem;
+  color: #ff6f61;
+  margin: 0;
+  filter: drop-shadow(2px 4px 6px black);
+  opacity: 0;
+}
+
+.header p {
+  font-size: 1.2rem;
+  margin: 0.5rem 0;
+  color: #ff6f61;
+  opacity: 0;
+}
+
+/* Content */
+.content {
+  padding: 1.5rem;
+}
+
+section {
+  margin-bottom: 2rem;
+}
+
+h2 {
+  color: #ff6f61;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+p, ul, li {
+  font-size: 1rem;
+  margin: 0.5rem 0;
+}
+
+ul {
+  list-style-type: disc;
+  padding-left: 1rem;
+}
+
+.moneybox{
+width: 400px;
+height: auto;
+max-width: 100%;
+}
+
+
+/* Featured Books */
+.book-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 1.5rem;
+}
+
+.book {
+  background-color: #222;
+  padding: 1rem;
+  border-radius: 8px;
+}
+
+.book h3 {
+  margin-top: 0;
+  color: #ff6f61;
+}
+
+/* Reviews */
+blockquote {
+  font-style: italic;
+  margin: 1rem 0;
+  padding-left: 1rem;
+  border-left: 4px solid #ff6f61;
+}
+
+/* Footer */
+.footer {
+  text-align: center;
+  padding: 1rem;
+  background-color: #1e1e1e;
+  border-top: 2px solid #ff6f61;
+}
+
+.footer p {
+  font-size: 0.9rem;
+  margin: 0.5rem 0;
+}
+  </style>
+<body>
+<!-- Top Page Advertisement -->
+  <div id="top-ad" class="top-ad">
+    <div id="ad-content" class="ad-content hidden-content">
+      <p>🎉 Exness Broker: $10 deposit and best leverage. <strong><a href="https://one.exnesstrack.org/a/bzowjwynv9?source=app&platform=mobile&pid=mobile_share">Try Exness</a></strong>. 🎉</p>
+      <button id="close-ad" class="close-ad">✖</button>
+    </div>
+  </div>
+
+  <!-- Header Section -->
+  <header class="header">
+    <h1>The Money Box</h1>
+    <p>A Book Sale Event Like No Other</p>
+  </header>
+
+  <!-- Main Content -->
+  <main class="content">
+    <!-- About the Book Sale -->
+    <section class="about" id="about">
+      <h2>The Money Box</h2>
+      <p>A Comprehensive Guide for Beginners and Advanced Traders. This is an in-depth eBook designed to equip readers with essential knowledge and strategies for success in the foreign exchange market. Covering topics from fundamental concepts to advanced trading techniques, this guide offers practical insights and actionable steps to enhance trading skills. Whether you're new to forex trading or seeking to refine your strategies, this resource provides the tools needed to navigate the complexities of the forex market effectively.</p>
+    </section>
+
+    <!- Buy Now -->
+    <section class="featured" id="featured">
+     <a href="https://paystack.com/pay/6yev0cz3ao"><h2><small>Access ebook</small><br><small>N24,500</small></h2></a>
+    </section>
+
+    <!-- Featured Books -->
+    <section class="featured" id="featured">
+      <h2>About The Book</h2>
+      <img src="moneybox.jpeg" alt="Moneybox" class="moneybox">
+	</div>
+      <p>The Book Excerpts</p>
+      <div class="book-grid">
+        <div class="book">
+          <h3>Understanding Market Dynamics</h3>
+          <p>Explore how economic indicators, geopolitical events, and market sentiment influence currency movements.</p>
+        </div>
+        <div class="book">
+          <h3>Analysis Techniques</h3>
+          <p>Learn to interpret chart patterns, moving averages, and oscillators to predict price trends.</p>
+        </div>
+        <div class="book">
+          <h3>Risk Management Strategies</h3>
+          <p>Implement position sizing, stop-loss orders, and leverage control to protect your capital and build a robust financial plan.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Book Discounts and Offers -->
+    <section class="discounts" id="discounts">
+      <h2>Table of Contents</h2>
+      <p>The Money Box features the following:</p>
+      <ul>
+        <li>Chapter 1<br>Explains what forex trading is and why it's unique. Introduces key market participants, benefits, and risks. Covers essential trading terms like pips, spreads, leverage, and lot sizes.</li>
+        <li>Chapter 2<br>Guides readers on choosing a reliable broker and trading platform (MetaTrader, TradingView). Emphasizes the importance of demo trading before risking real money.</li>
+        <li>Chapter 3<br>Discusses market-moving factors like economic data and geopolitical events. Covers fundamental and technical analysis and explains supply and demand in forex.</li>
+        <li>Chapter 4<br>Focuses on trading psychology, handling emotions, and building discipline. Teaches how to develop resilience and avoid emotional decision-making.</li>
+        <li>Chapter 5<br>Explains risk/reward ratios, lot sizing, and stop-loss strategies. Covers the dangers of overtrading and excessive leverage.</li>
+        <li>Chapter 6<br>Teaches how to develop a structured trading plan. Introduces scalping, day trading, swing trading, and position trading strategies, along with backtesting techniques.</li>
+        <li>Chapter 7<br>Introduces institutional trading techniques, liquidity zones, order blocks, and market structure. Shows how to trade like banks and institutions.</li>
+        <li>Chapter 8<br>Explains candlestick patterns, key indicators (RSI, MACD, moving averages), and common chart patterns. Teaches how to combine indicators for better analysis.</li> 
+        <li>Chapter 9<br>Covers different trading timeframes, their impact on strategies, and the best times to trade currency pairs based on global sessions.</li>      
+        <li>Chapter 10<br>Lists essential tools like economic calendars and trading simulators. Recommends communities for continuous learning.</li>
+        <li>Chapter 11<br>Highlights common beginner mistakes, including revenge trading, overleveraging, and emotional decisions. Teaches how to build a sustainable approach.</li>
+        <li>Chapter 12<br>Explains how to transition from demo to live trading, grow a small account, and explore additional forex-related income sources like prop firms and teaching.</li>
+        <li>Conclusion<br>An excellent wrap up of the book's key concepts.</li>
+      </ul>
+    </section>
+
+    <!-- Author Spotlight -->
+    <section class="author" id="author">
+      <h2>Author Spotlight</h2>
+      <p>With over 10 years of exprience in trading and finances, Michael Oaklynn brings a wealth of Knowledge and practical insights to the table. Michael's work has been featured in leading finacial publications and has inspired countless individuals worldwide. Also as a sought-after speaker, he delivers impactful presentations on financial literacy and wealth creation.</p>
+    </section>
+
+    <!-- Customer Reviews -->
+    <section class="reviews" id="reviews">
+      <h2>Reviews</h2>
+      <blockquote>"This book has been a game-changer for my finances! I highly recommend it to anyone looking for a practical guide to building wealth." - Emily R.</blockquote>
+      <blockquote>"The author's insights are invaluable, implementing the tips completely changed how I trading. Absolutely amazing!!" - Chris T.</blockquote>
+    </section>
+
+   <!- Buy Now -->
+    <section class="featured" id="featured">
+<a href="https://paystack.com/pay/6yev0cz3ao"><h2><small>Access ebook</small><br><small>N24,500</small></h2></a>
+    </section>
+
+    <!-- Contact and Inquiries -->
+    <section class="contact" id="contact">
+      <h2>Contact and Inquiries</h2>
+      <p>If you have any questions about the event or need assistance, please reach out to us:</p>
+      <ul>
+        <li>Email: <a href="mailto:info@moneyboxbooksale.com">info@moneyboxbooksale.com</a></li>
+        <li>Phone: +1-812-232-7964</li>
+        <li>Contact us for any for updates!</li>
+      </ul>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>&copy; 2025 The Money Box. All rights reserved.</p>
+  </footer>
+</body>
+  <script>
+// Get the item from local storage
+const item = localStorage.getItem("status");
+
+// Check if the item exists
+if (item !== null) {
+  // Redirect to another page if the item does exist
+  window.location.href = "https://themoneyboxtradingstrategy.github.io/moneybox/";
+}
+// Select the advertisement content and close button
+const adContent = document.getElementById("ad-content");
+const closeAdButton = document.getElementById("close-ad");
+
+// Function to slide in the ad content
+function slideInAd() {
+  adContent.classList.remove("hidden-content");
+  adContent.classList.add("visible-content");
+}
+
+// Function to slide out the ad content when closed
+function slideOutAd() {
+  adContent.classList.remove("visible-content");
+  adContent.classList.add("hidden-content");
+}
+
+// Trigger the ad content slide-in after 1 second
+setTimeout(slideInAd, 1000);
+
+// Add event listener to close the ad when the button is clicked
+closeAdButton.addEventListener("click", slideOutAd);
+  </script>
+</html>
