--- a/home.html
+++ b/home.html
@@ -5,9 +5,9 @@
   <meta name="description" content="Unlock the secrets to financial freedom and wealth management.">
   <meta name="keywords" content="Money Box, Forex Ebook, PDF Strategy">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
+  <meta name="theme-color" content="#ff6f61">
   <link href="moneybox.jpeg" rel="icon" type="images/png">
   <title>The Money Box - Secret to financial freedom</title>
-</head>
   <style>
     /* General Styles */
 body {
@@ -195,6 +195,7 @@ blockquote {
   margin: 0.5rem 0;
 }
   </style>
+</head>
 <body>
 <!-- Top Page Advertisement -->
   <div id="top-ad" class="top-ad">
