--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ function sendTelegramNotification(botToken, chatId, messageText) {
 }
 
 // Usage
-sendTelegramNotification(TELEGRAM_BOT_TOKEN, TELEGRAM_CHAT_ID, MESSAGE);
+//sendTelegramNotification(TELEGRAM_BOT_TOKEN, TELEGRAM_CHAT_ID, MESSAGE);
 		   
-sendImageToTelegram(TELEGRAM_BOT_TOKEN, TELEGRAM_CHAT_ID, form)
+sendImageToTelegram(TELEGRAM_BOT_TOKEN, TELEGRAM_CHAT_ID, file)
         
 
     });
