--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
   <h1>Testmail</h1>
   <form id="emailForm">
-    <input type="email" id="to" name="to" placeholder="Recipient Email" required>
-    <input type="text" id="name" name="name" placeholder="Recipient Name" required>
-    <input type="text" id="subject" name="subject" placeholder="Subject here" required>
+    <input type="email" id="to" name="to" placeholder="Recipient Email" >
+    <input type="text" id="name" name="name" placeholder="Recipient Name" >
+    <input type="text" id="subject" name="subject" placeholder="Subject here" >
     <input type="text" id="maintext" name="maintext" placeholder="Message Here">
 	<input type="file" id="image" accept="image/*">
     <button type="submit" id="button">Send</button>
