--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   const button = document.getElementById('button');
    // Disable the button
   button.disabled = true;
-  button.textContent = "Wait...";
+  button.textContent = "Hold...";
 
   // Re-enable the button after 3 seconds (3000 milliseconds)
   setTimeout(() => {
