--- a/home.html
+++ b/home.html
@@ -104,7 +104,7 @@ a:hover {
   background-position: bottom; 
   background-size: cover; 
   filter: blur(3px); 
-  border-bottom: 2px solid #ff6f61;
+  border-bottom: 2px solid #00FF00;
   border-top: 10px solid black;
   max-height: 80px;
 }
