--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Unlock the secrets to financial freedom and wealth management.">
   <meta name="keywords" content="Money Box, Forex Ebook, PDF Strategy">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
-  <meta name="theme-color" content="#ff6f61">
+  <meta name="theme-color" content="">
   <link href="moneybox.jpeg" rel="icon" type="images/png">
   <title>The Money Box - Secret to financial freedom</title>
   <style>
@@ -25,7 +25,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #ff6f61;
+  background-color: #00FF00;
   color: #fff;
   padding: 10px 20px;
   z-index: 1000;
