--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@ body {
   color: #fff;
   padding: 10px 20px;
   z-index: 1000;
-  border-bottom: 2px solid #ff6f61;
+  border-bottom: 2px solid #fff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   overflow: hidden; /* Ensures content does not overflow during animation */
 }
