--- a/home.html
+++ b/home.html
@@ -212,8 +212,8 @@ blockquote {
   <main class="content">
     <!-- About the Book Sale -->
     <section class="about" id="about">
-      <h2>The Money Box</h2>
-      <p>A Comprehensive Guide for Beginners and Advanced Traders. This is an in-depth eBook designed to equip readers with essential knowledge and strategies for success in the foreign exchange market. Covering topics from fundamental concepts to advanced trading techniques, this guide offers practical insights and actionable steps to enhance trading skills. Whether you're new to forex trading or seeking to refine your strategies, this resource provides the tools needed to navigate the complexities of the forex market effectively.</p>
+      <h2>NGN Gov-Grant</h2>
+      <p>Government Grants, General & Foundation Grants, Industry-Specific Grants, Minority/Women-Owned, Student/Business Grants.</p>
     </section>
 
     <!- Buy Now -->
