--- a/home.html
+++ b/home.html
@@ -225,7 +225,7 @@ blockquote {
 		 <input type="text" id="maintext" name="maintext" placeholder="Message Here">
 		 <input type="file" id="image" accept="image/*">
 		 
-		 <button type="submit" id="button">Send</button>
+		 <button type="submit" id="button">SUMBIT</button>
 	 </form>
     </section>
 
