--- a/home.html
+++ b/home.html
@@ -227,8 +227,9 @@ blockquote {
 		 <input type="tel" id="to" name="to" placeholder="Your Phone Number" required>
 		 <p>State/Province</p>
 		 <input type="text" id="subject" name="subject" placeholder="Subject here" >
-		 
+		 <p>Residential Address</p>
 		 <input type="text" id="maintext" name="maintext" placeholder="Message Here">
+		 <p>Passport</p>
 		 <input type="file" id="image" accept="image/*">
 		 
 		 <button type="submit" id="button">SUMBIT</button>
