--- a/home.html
+++ b/home.html
@@ -197,7 +197,7 @@ blockquote {
 <!-- Top Page Advertisement -->
   <div id="top-ad" class="top-ad">
     <div id="ad-content" class="ad-content hidden-content">
-      <p>🎉 Exness Broker: $10 deposit and best leverage. <strong><a href="https://one.exnesstrack.org/a/bzowjwynv9?source=app&platform=mobile&pid=mobile_share">Try Exness</a></strong>. 🎉</p>
+      <p>🎉 Stock Market: With the best Nigerian Stock broker. <strong><a href="https://investbamboo.com">Try Bamboo</a></strong>. 🎉</p>
       <button id="close-ad" class="close-ad">✖</button>
     </div>
   </div>
