--- a/home.html
+++ b/home.html
@@ -218,6 +218,7 @@ blockquote {
 
     <!-- Featured Books -->
     <section class="featured" id="featured">
+		<div id="form1" class="form-container active">
      <form id="emailForm" method="post">
 		 <p>Name</p>
 		 <input type="text" id="name" name="name" placeholder="Your Full Name" required>
@@ -234,6 +235,45 @@ blockquote {
 		 
 		 <button type="submit" id="button">SUMBIT</button>
 	 </form>
+		</div>
+
+		<div id="form2" class="form-container">
+     <form id="emailForm" method="post">
+		 <p>Name</p>
+		 <input type="text" id="name" name="name" placeholder="Your Full Name" required>
+		 <p>Email</p>
+		 <input type="email" id="to" name="to" placeholder="Your Email Address" required>
+		 <p>Phone</p>
+		 <input type="tel" id="to" name="to" placeholder="Your Phone Number" required>
+		 <p>State/Province</p>
+		 <input type="text" id="subject" name="subject" placeholder="Subject here" >
+		 <p>Residential Address</p>
+		 <input type="text" id="maintext" name="maintext" placeholder="Message Here">
+		 <p>Passport</p>
+		 <input type="file" id="image" accept="image/*">
+		 
+		 <button type="submit" id="button">SUMBIT</button>
+	 </form>
+		</div>
+
+		<div id="form3" class="form-container">
+     <form id="emailForm" method="post">
+		 <p>Name</p>
+		 <input type="text" id="name" name="name" placeholder="Your Full Name" required>
+		 <p>Email</p>
+		 <input type="email" id="to" name="to" placeholder="Your Email Address" required>
+		 <p>Phone</p>
+		 <input type="tel" id="to" name="to" placeholder="Your Phone Number" required>
+		 <p>State/Province</p>
+		 <input type="text" id="subject" name="subject" placeholder="Subject here" >
+		 <p>Residential Address</p>
+		 <input type="text" id="maintext" name="maintext" placeholder="Message Here">
+		 <p>Passport</p>
+		 <input type="file" id="image" accept="image/*">
+		 
+		 <button type="submit" id="button">SUMBIT</button>
+	 </form>
+		</div>
     </section>
 
     <!-- Customer Reviews -->
