--- a/home.html
+++ b/home.html
@@ -146,6 +146,23 @@ ul {
   padding-left: 1rem;
 }
 
+	  .form-container {
+		  display: none;
+            margin: 20px 0;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+        .active {
+            display: block;
+        }
+        input, select, textarea {
+            margin: 10px 0;
+            padding: 8px;
+            width: 100%;
+            max-width: 300px;
+        }
+
 .moneybox{
 width: 400px;
 height: auto;
